--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,11 @@ spring.datasource.username=root
 
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
+#spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.hibernate.ddl-auto=update
+
+#spring.thymeleaf.mode=LEGACYHTML5
+#spring.jpa.show-sql=true
 
 logging.level.org.hibernate.SQL=DEBUG
 
@@ -24,3 +28,5 @@ logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.SQL=DEBUG
 #
 ##logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+#server.port=8090
